fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ margin: 0;
 
 .newsfeed{
   display: block;
-  width: 40% !important;
+  width: 40%;
   height: 90%;
   float: right;
   overflow-y: scroll;
